service/lab2-cluster-ip/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: clusterip-web
  ports:
  - port: 80
    targetPort: 80
